examples/test/testpolicy7150.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7150
  namespace: namespace116
spec:
  podSelector:
    matchLabels:
      key8: value1
      key12: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value21
          key26: value41
          key43: value40
      podSelector:
        matchLabels:
          key4: value43
          key46: value9
          key37: value19
